--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Simone Petri", email = ""},
 ]
-dependencies = ["numpy>=1.24.4", "matplotlib>=3.7.5", "scipy>=1.9.3", "einops>=0.8.1", "sympy>=1.13.3", "pre-commit>=3.5.0", "mypy>=1.14.1", "black>=24.8.0", "line-profiler>=4.2.0"]
+dependencies = ["numpy>=1.24.4", "matplotlib>=3.7.5", "scipy>=1.9.3", "einops>=0.8.1", "sympy>=1.13.3", "pre-commit>=3.5.0", "mypy>=1.14.1", "black>=24.8.0", "line-profiler>=4.2.0", "numba>=0.58.1"]
 requires-python = ">=3.8"
 readme = "README.md"
 license = {text = "MIT"}
